[package]
name = "russh"
version = "0.1.0"
authors = ["APoniatowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.101"
serde_yaml = "0.8.11"
ssh2 = "0.4.0"
async-log = "2.0.0"